<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        style="@style/subtitle_medium"
        android:textColor="@color/text_default"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/title_sort"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_20"/>

    <TextView
        android:id="@+id/tv_sort_by_distance"
        android:layout_width="match_parent"
        style="@style/subtitle_small"
        android:textColor="@color/black"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/sort_by_distance"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_20"/>

    <TextView
        android:id="@+id/tv_sort_by_recommend"
        android:layout_width="match_parent"
        style="@style/subtitle_small"
        android:textColor="@color/text_disabled"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/sort_by_recommendation"/>

</LinearLayout>