<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_spot_category"
    android:paddingHorizontal="@dimen/horizontal_padding_default_spacing"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <RelativeLayout
        android:id="@+id/layout_category_recommend"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:paddingTop="13dp"
        android:paddingBottom="9dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/layout_category_snap"
        android:background="@drawable/bg_rounded_10_blue_20">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/tv_category_recommend"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_desc_category_recommend"
            android:src="@drawable/ic_category_recommend"/>
        <TextView
            android:id="@+id/tv_category_recommend"
            style="@style/caption_small"
            android:textColor="@color/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/category_recommend"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_category_snap"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:paddingTop="13dp"
        android:paddingBottom="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_category_recommend"
        app:layout_constraintEnd_toStartOf="@+id/layout_category_night_view"
        android:background="@drawable/bg_rounded_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/tv_category_snap"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_desc_category_recommend"
            android:src="@drawable/ic_category_snap"/>
        <TextView
            android:id="@+id/tv_category_snap"
            style="@style/caption_small"
            android:textColor="@color/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/category_snap"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_category_night_view"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:paddingTop="13dp"
        android:paddingBottom="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_category_snap"
        app:layout_constraintEnd_toStartOf="@+id/layout_category_everyday_life"
        android:background="@drawable/bg_rounded_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/tv_category_night_view"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_desc_category_night_view"
            android:src="@drawable/ic_category_night_view"/>
        <TextView
            android:id="@+id/tv_category_night_view"
            style="@style/caption_small"
            android:textColor="@color/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/category_night_view"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_category_everyday_life"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:paddingTop="13dp"
        android:paddingBottom="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_category_night_view"
        app:layout_constraintEnd_toStartOf="@+id/layout_category_nature"
        android:background="@drawable/bg_rounded_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/tv_category_everyday_life"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_desc_category_everyday_life"
            android:src="@drawable/ic_category_everyday_life"/>
        <TextView
            android:id="@+id/tv_category_everyday_life"
            style="@style/caption_small"
            android:textColor="@color/text_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/category_everyday_life"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_category_nature"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:paddingTop="13dp"
        android:paddingBottom="9dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layout_category_everyday_life"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_rounded_10">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/tv_category_nature"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/img_desc_category_nature"
            android:src="@drawable/ic_category_nature"/>
        <TextView
            android:id="@+id/tv_category_nature"
            style="@style/caption_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_default"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:lines="1"
            android:text="@string/category_nature"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>