<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.cmc.design.component.PatataAppBar
            android:id="@+id/add_spot_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headButtonType="back"
            app:bodyType="title"
            app:footButtonType="cancel"
            app:appBarBackgroundStyle="white"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/add_spot_appbar"
            app:layout_constraintBottom_toTopOf="@+id/layout_register">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="17dp">

                <!-- Title -->
                <TextView
                    android:id="@+id/tv_input_title"
                    style="@style/subtitle_medium"
                    android:textColor="#17191D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_input"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.cmc.design.component.PatataEditText
                    android:id="@+id/et_input_title"
                    app:editTextTextAppearance="@style/body_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextHint="@string/hint_input_title"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_input_title"/>

                <!-- Address -->
                <TextView
                    android:id="@+id/tv_input_address_title"
                    style="@style/subtitle_medium"
                    android:textColor="#17191D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_input_address_detail"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_input_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_input_address"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="@dimen/default_spacing"
                    android:paddingEnd="8dp"
                    android:background="@drawable/bg_rounded_8"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    app:layout_constraintTop_toBottomOf="@+id/tv_input_address_title">

                    <TextView
                        android:id="@+id/tv_input_address"
                        style="@style/body_small"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/text_disabled"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_current_location"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:text="서울특별시 용산구 원효로 441-49"/>

                    <ImageView
                        android:id="@+id/iv_current_location"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_current_location_inactive"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.cmc.design.component.PatataEditText
                    android:id="@+id/et_input_address_detail"
                    app:editTextTextAppearance="@style/body_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextHint="@string/hint_input_address_detail"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_input_address"/>

                <!-- Content Description -->
                <TextView
                    android:id="@+id/tv_content_desc_title"
                    style="@style/subtitle_medium"
                    android:textColor="#17191D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_input_content_desc"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_input_address_detail"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.cmc.design.component.PatataEditText
                    android:id="@+id/et_content_desc"
                    app:editTextTextAppearance="@style/body_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextHeight="120dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_content_desc_title"/>

                <TextView
                    android:id="@+id/tv_input_spot_desc"
                    style="@style/body_small"
                    android:textColor="@color/text_disabled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_input_spot_desc"
                    android:layout_marginHorizontal="@dimen/default_spacing"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toTopOf="@+id/et_content_desc"
                    app:layout_constraintStart_toStartOf="@+id/et_content_desc"
                    app:layout_constraintEnd_toEndOf="@+id/et_content_desc"/>

                <TextView
                    android:id="@+id/tv_input_spot_desc_warning"
                    android:layout_width="0dp"
                    style="@style/caption_medium"
                    android:textColor="@color/text_disabled"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_input_spot_desc_waring"
                    android:layout_marginHorizontal="@dimen/default_spacing"
                    app:layout_constraintTop_toBottomOf="@+id/tv_input_spot_desc"
                    app:layout_constraintStart_toStartOf="@+id/et_content_desc"
                    app:layout_constraintBottom_toBottomOf="@+id/et_content_desc"
                    app:layout_constraintEnd_toEndOf="@+id/et_content_desc"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_spot_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:constraint_referenced_ids="tv_input_spot_desc,tv_input_spot_desc_warning"/>

                <!-- Category -->
                <TextView
                    android:id="@+id/tv_choose_category_title"
                    style="@style/subtitle_medium"
                    android:textColor="#17191D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_choose_category"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_content_desc"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_choose_category_title"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:paddingStart="@dimen/default_spacing"
                    android:paddingEnd="8dp"
                    android:background="@drawable/bg_rounded_8"
                    android:clipToPadding="false"
                    android:clipChildren="false"
                    app:layout_constraintTop_toBottomOf="@+id/tv_choose_category_title">

                    <TextView
                        android:id="@+id/tv_choose_category"
                        style="@style/body_small"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:textColor="@color/text_disabled"
                        android:singleLine="true"
                        android:gravity="center_vertical"
                        android:text="@string/hint_choose_category"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/iv_arrow"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <ImageView
                        android:id="@+id/iv_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_polygon"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Picture -->
                <TextView
                    android:id="@+id/tv_choose_picture"
                    style="@style/subtitle_medium"
                    android:textColor="#17191D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_choose_picture"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_choose_category_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_choose_picture_button"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_8_gray"
                    app:layout_constraintTop_toBottomOf="@+id/tv_choose_picture"
                    app:layout_constraintStart_toStartOf="parent">
                    <ImageView
                        android:id="@+id/iv_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_gallery_inactive"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/tv_gallery"
                        app:layout_constraintEnd_toEndOf="parent"/>
                    <TextView
                        android:id="@+id/tv_gallery"
                        style="@style/caption_small"
                        android:textColor="@color/gray_60"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintVertical_chainStyle="packed"
                        android:text="@string/add_picture"
                        android:layout_marginTop="6dp"
                        app:layout_constraintTop_toBottomOf="@+id/iv_gallery"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Picture -->
                <TextView
                    android:id="@+id/tv_input_hashtag"
                    style="@style/subtitle_medium"
                    android:textColor="#17191D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_input_hashtag"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_choose_picture_button"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.cmc.design.component.PatataEditText
                    android:id="@+id/et_input_hashtag"
                    app:editTextTextAppearance="@style/body_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:editTextHint="@string/hint_input_hashtag"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="84dp"
                    android:foregroundGravity="top"
                    app:layout_constraintTop_toBottomOf="@+id/tv_input_hashtag"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <LinearLayout
                    android:id="@+id/layout_hashtag_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="start"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/et_input_hashtag"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <!-- 등록하기 버튼 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/layout_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_profile_complete"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/subtitle_medium"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/register"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>