<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_sign_up_success"/>

            <TextView
                style="@style/headline_small"
                android:textColor="@color/gray_100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/title_signup_success"/>

            <TextView
                style="@style/subtitle_small"
                android:textColor="@color/blue_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="14dp"
                android:text="@string/desc_signup_success"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/layout_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_profile_complete"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="15dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/subtitle_medium"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/confirm"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
